--- a/css/style.css
+++ b/css/style.css
@@ -281,19 +281,19 @@ h2 {
 }
 
         .ae {
-            background-image: url(../img/icono\ ae.png);
+            background-image: url(../img/icono_ae.png);
             background-repeat: no-repeat;
             background-size: 100%;
         }
         
         .ai {
-            background-image: url(../img/icono\ ai.png);
+            background-image: url(../img/icono_ai.png);
             background-repeat: no-repeat;
             background-size: 100%;
         }
 
         .ps {
-            background-image: url(../img/icono\ ps.png);
+            background-image: url(../img/icono_ps.png);
             background-repeat: no-repeat;
             background-size: 100%;
         }
